--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Johnny Dellaluna</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Johnny Dellaluna</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+ <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="btn btn-default btn-lg">
+          <span class="glyphicon glyphicon-globe" aria-hidden="true"></span><a href="index.html"> Johnny Dellaluna</a>
+        </button>
+        
+        <p class="navbar-text navbar-right"><a href="index.html" class="navbar-link">About</a></p>
+        <p class="navbar-text navbar-right"><a href="portfolio.html" class="navbar-link">Portfolio</a></p>
+        <p class="navbar-text navbar-right"><a href="contact.html" class="navbar-link">Contact</a></p>
+      </div>
     </div>
-  </header>
+  </nav>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
+  <div class="jumbotron vertical-center">
+  	<h2>HTML. CSS.</h2>
+  	<h1><strong>Johnny.</strong></h1>
+  </div>
+
       <h1>About Me</h1>
 
 		<img class="me" src="assets/images/20170722_183532.jpg" alt= "Picture of Johnny Dellaluna"; width="240" height="240">
@@ -51,11 +55,15 @@
     </section>
   </div>
 
+
   <footer>
-    <div class="container">
-      Copyright &copy; 2017 Johnny Dellaluna
-    </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+        <p>Copyright &copy; 2017 Johnny Dellaluna</p>
+      </div>
+    </nav>
   </footer>
 </body>
+</html>
 
 </html>
