--- a/index.html
+++ b/index.html
@@ -1,60 +1,54 @@
 <!doctype html>
 <html lang="en-us">
 
-<head>
-  <meta charset="UTF-8">
-  <title>About | Johnny Dellaluna</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
+	<head>
+	  <meta charset="UTF-8">
+	  <title>About | Johnny Dellaluna</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	</head>
 
-<body>
+	<body>
 
- <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="btn btn-default btn-lg">
-          <span class="glyphicon glyphicon-globe" aria-hidden="true"></span><a href="index.html"> Johnny Dellaluna</a>
-        </button>
-        
-        <p class="navbar-text navbar-right"><a href="index.html" class="navbar-link">About</a></p>
-        <p class="navbar-text navbar-right"><a href="portfolio.html" class="navbar-link">Portfolio</a></p>
-        <p class="navbar-text navbar-right"><a href="contact.html" class="navbar-link">Contact</a></p>
-      </div>
-    </div>
-  </nav>
+	 <nav class="navbar navbar-default">
+	    <div class="container-fluid">
+	      <div class="navbar-header">
+	        <button type="button" class="btn btn-default btn-lg">
+	          <span class="glyphicon glyphicon-globe" aria-hidden="true"></span><a href="index.html"> Johnny Dellaluna</a>
+	        </button>
+	        
+	        <p class="navbar-text navbar-right"><a href="index.html" class="navbar-link">About</a></p>
+	        <p class="navbar-text navbar-right"><a href="portfolio.html" class="navbar-link">Portfolio</a></p>
+	        <p class="navbar-text navbar-right"><a href="contact.html" class="navbar-link">Contact</a></p>
+	      </div>
+	    </div>
+	  </nav>
 
-  <div class="jumbotron vertical-center">
-  	<h2>HTML. CSS.</h2>
-  	<h1><strong>Johnny.</strong></h1>
-  </div>
+	  <div class="jumbotron vertical-center">
+	  	<h1>HTML. CSS. Johnny.</h1>
+	  </div>
 
-      <h1>About Me</h1>
-
-		<img class="me" src="assets/images/20170722_183532.jpg" alt= "Picture of Johnny Dellaluna"; width="240" height="240">
-		<p>Welcome to my first website! I hope you enjoy it (and take a look at the "Inspect" tool in Chrome, so you can tell me about any updates I need to make). I'm new to coding but certainly not new to why the internet rocks, and I hope this site is the mark of a great beginning to a terrific programming career.
-		<br>
-		<br>
-		I love movies, cartoons, and classic literature. In fact, I can't imagine life without them. I also can't imagine where I'd be without my family and my wonderful girlfriend, Becca. Currently, my work lies in publishing, where I facilitate teaching and learning through higher education sales. Sure, students just rent textbooks now, but it's a living.
-		<br>
-		<br>
-		What I hope to seek from a future career in programming is a chance to develop websites and apps that will change the world. I love video games and would naturally be enamored to help develop a game of my own someday. My journey is an unorthodox path to coding, but despite that, computers make anything possible, and it's my mission to prove that.
-		<br>
-		<br>
-		Social media obsessed like me? Here are links to my <a href="https://www.facebook.com/johnny.dellaluna" target= "_blank">Facebook</a> and <a href = "https://www.instagram.com/johnnydellaluna/" target= "_blank">Instagram</a>, and while we're at it, here's my <a href= "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target= "_blank"> Netflix</a> account.</p>
-
-    </section>
+	  <div class="col-md-8">
+	      <h1>About Me</h1>
+<!-- Not showing full content of container -->
+			<img class="me" src="assets/images/20170722_183532.jpg" alt= "Picture of Johnny Dellaluna"; width="240" height="240">
+			<p>Welcome to my first website! I hope you enjoy it (and take a look at the "Inspect" tool in Chrome, so you can tell me about any updates I need to make). I'm new to coding but certainly not new to why the internet rocks, and I hope this site is the mark of a great beginning to a terrific programming career.</p>
+			<p>I love movies, cartoons, and classic literature. In fact, I can't imagine life without them. I also can't imagine where I'd be without my family and my wonderful girlfriend, Becca. Currently, my work lies in publishing, where I facilitate teaching and learning through higher education sales. Sure, students just rent textbooks now, but it's a living.</p>
+			<p>What I hope to seek from a future career in programming is a chance to develop websites and apps that will change the world. I love video games and would naturally be enamored to help develop a game of my own someday. My journey is an unorthodox path to coding, but despite that, computers make anything possible, and it's my mission to prove that.</p>
+			<p>Social media obsessed like me? Here are links to my <a href="https://www.facebook.com/johnny.dellaluna" target= "_blank">Facebook</a> and <a href = "https://www.instagram.com/johnnydellaluna/" target= "_blank">Instagram</a>, and while we're at it, here's my <a href= "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target= "_blank"> Netflix</a> account.</p>
+	  </div>
 
     <section class="sidebar">
       <div id="connect">
-        <h2>Connect with Me</h2>
+      	<div class="col-md-4">
+	        <h1>Connect with Me</h1>
 
-        <a href="https://github.com/johnnydellaluna"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/johnnydellaluna/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8038555/johnny-dellaluna"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+	        <a href="https://github.com/johnnydellaluna"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+	        <a href="https://www.linkedin.com/in/johnnydellaluna/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+	        <a href="https://stackoverflow.com/users/8038555/johnny-dellaluna"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+
+      	</div>
       </div>
     </section>
-  </div>
-
 
   <footer>
     <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -64,6 +58,5 @@
     </nav>
   </footer>
 </body>
-</html>
 
 </html>
