--- a/portfolio.html
+++ b/portfolio.html
@@ -23,48 +23,53 @@
     </div>
   </nav>
 
+  
+
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Portfolio</h1>
+      <div class="col-md-7">
+        <h1>Portfolio</h1>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-        <h3>Hangman</h3>
+          <h3>Hangman</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+          <h3>RPG Game</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+          <h3>Trivia Game</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+          <h3>Rutgers Info Widget</h3>
+        </div>
+        <div class="work">
+          <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+          <h3>Rock Paper Scissors</h3>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
     </section>
 
     <section class="sidebar">
       <div id="connect">
-        <h2>Connect with Me</h2>
+        <div class="col-md-5">
+          <h1>Connect with Me</h1>
 
-        <a href="https://github.com/johnnydellaluna"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/johnnydellaluna/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8038555/johnny-dellaluna"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+          <a href="https://github.com/johnnydellaluna"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+          <a href="https://www.linkedin.com/in/johnnydellaluna/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+          <a href="https://stackoverflow.com/users/8038555/johnny-dellaluna"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+
+        </div>
       </div>
     </section>
-  </div>
 
   <footer>
     <nav class="navbar navbar-default navbar-fixed-bottom">
