coded widths for media queries, but can't get working

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	  <meta charset="UTF-8">
 	  <title>About | Johnny Dellaluna</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href=“assets/css/style.css”>
 	</head>
 
 	<body>
@@ -23,10 +24,10 @@
 	    </div>
 	  </nav>
 
-	  <div class="jumbotron vertical-center">
-	  	<h1>HTML. CSS. Johnny.</h1>
+	  <div class="jumbotron">
+	  	<h1>Writer. Coder. Johnny.</h1>
 	  </div>
-
+	<section class="about me">
 	  <div class="col-md-8">
 	      <h1>About Me</h1>
 <!-- Not showing full content of container -->
@@ -36,7 +37,8 @@
 			<p>What I hope to seek from a future career in programming is a chance to develop websites and apps that will change the world. I love video games and would naturally be enamored to help develop a game of my own someday. My journey is an unorthodox path to coding, but despite that, computers make anything possible, and it's my mission to prove that.</p>
 			<p>Social media obsessed like me? Here are links to my <a href="https://www.facebook.com/johnny.dellaluna" target= "_blank">Facebook</a> and <a href = "https://www.instagram.com/johnnydellaluna/" target= "_blank">Instagram</a>, and while we're at it, here's my <a href= "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target= "_blank"> Netflix</a> account.</p>
 	  </div>
-
+	</section>
+	
     <section class="sidebar">
       <div id="connect">
       	<div class="col-md-4">
