--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Portfolio | Johnny Dellaluna</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href=“assets/css/style.css”>
 </head>
 
 <body>
